DiadocPostcard: fix description__suggestion text-align

--- a/style.css
+++ b/style.css
@@ -78,9 +78,6 @@ body {
   background-color: var(--diadoc-color);
   padding: 1rem;
   border-radius: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   transition: transform 0.2s ease-in-out;
   will-change: transform;
   font-weight: 600;
